--- a/src/index.css
+++ b/src/index.css
@@ -2992,13 +2992,13 @@
   }
  
  .content-container {
-   width: 90vw;
+   width: 95vw;
    font-size: 10px;
-   margin-left: auto;
+   margin-left: 10px;
  }
   
  .mission-block {
-  width: 90vw;
+  //width: 90vw;
  }
 	
  .bill-item h4 {
@@ -3007,7 +3007,7 @@
 
   .model-section {
    margin-bottom: 300px;
-   width: 90vw;
+   //width: 90vw;
   }
   
   .instructions-section {
