--- a/src/index.css
+++ b/src/index.css
@@ -361,6 +361,8 @@
     height: 800px; /* Sets a fixed height */
     position: relative; /* Positions elements relative to the popup */
     box-sizing: border-box; /* Includes padding in width and height */
+    overflow-y: hidden; 
+    overflow-x: hidden; 
   }
   
   /* Styles the heading inside upload popups with a specific font size */
